2009-09-30  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker (dwarf_path_finder::walk::jump): New method.
	(dwarf_ref_tracker::walk::jump): New method.

	* c++/dwarf (dwarf::debug_info_entry): Make constructor from file and
	offset public.
	(dwarf::debug_info_entry::compile_unit): New method.

	* c++/dwarf_comparator (dwarf_comparator::reference_match): Use the
	subtracker/subcomparator for attributes too.

	* c++/subr.hh (subr::sharing_stack::clear): New method.

	* c++/values.cc (dwarf::attr_value::what_space):
	Grok exprloc, flag_present, sec_offset.

	* c++/values.cc (dwarf::attr_value::what_space): Fix data[48] case
	to favor constants when expected.

2009-09-25  Roland McGrath  <roland@redhat.com>

	* c++/dwarf (dwarf::location_attr::operator==): Compare a singleton as
	a list so it matches a one-element full-range list.

	* c++/values.cc (dwarf::range_list::const_iterator::const_iterator):
	For begin case, actually get the offset from the attribute!
	(dwarf::location_attr::begin): Likewise.
	* c++/dwarf (dwarf::range_list, dwarf::location_attr): Fix iterator
	initializers accordingly.

2009-09-21  Roland McGrath  <roland@redhat.com>

	* c++/dwarf-knowledge.cc (expected_value_space): DW_AT_const_value can
	take an address too.

2009-09-08  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_output: Match duplicates going into the collector even
	when they contain circular references.

	* c++/dwarf_comparator (dwarf_comparator::equal_enough):
	New class method, broken out of ...
	* c++/dwarf_tracker (dwarf_ref_tracker::equal_enough::operator ()):
	... here.  Call it.
	(dwarf_path_finder, dwarf_ref_tracker): Don't assume iterators do ->.

	* c++/subr.hh (subr::wrapped_input_container): New class.

2009-09-01  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker (dwarf_path_finder): Use subr::sharing_stack.

	* c++/subr.hh (subr::sharing_stack): New template class.
	* c++/dwarf (dwarf::debug_info_entry::children_type::const_iterator):