@@ -1,3 +1,9 @@
+2009-10-01  Roland McGrath  <roland@redhat.com>
+
+	* c++/line_info.cc (dwarf::source_file::name): Check for failure
+	return from dwarf_formstring.
+	(dwarf::source_file::to_string): Likewise.
+
 2009-09-30  Roland McGrath  <roland@redhat.com>
 
 	* c++/dwarf_tracker (dwarf_path_finder::walk::jump): New method.
